<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RelativeLayout
            android:padding="@dimen/horizontalPadding16dp"
            android:paddingLeft="@dimen/horizontalPadding16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/coinIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/coinName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/coinIcon"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:textSize="20sp" />

            <CheckBox
                android:layout_centerVertical="true"
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/coinName"
                android:button="@drawable/checkbox_selector" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/id"
                style="@style/textStyle"
                android:id="@+id/textView4" />
            <TextView
                android:id="@+id/idText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                 />

        </RelativeLayout>

        <RelativeLayout
            android:background="@color/blueDark100"

            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/name"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/name"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingRight="@dimen/horizontalPadding16dp"
                />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/symbol" />

            <TextView
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

        <RelativeLayout
            android:background="@color/blueDark100"

            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"

                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/rank" />

            <TextView
                style="@style/textStyle"

                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"

                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/_24h_volume_usd" />

            <TextView
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/volumeUsd24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

        <RelativeLayout

            android:background="@color/blueDark100"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"

                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/market_cup_usd" />

            <TextView
                style="@style/textStyle"

                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/marketCupUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/available_supply" />

            <TextView
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/availableSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

        <RelativeLayout

            android:background="@color/blueDark100"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/total_supply" />

            <TextView
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/totalSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/price_usd" />

            <TextView
                android:paddingRight="@dimen/horizontalPadding16dp"
                style="@style/textStyle"
                android:layout_alignParentEnd="true"
                android:id="@+id/priceUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />

        </RelativeLayout>

        <RelativeLayout

            android:background="@color/blueDark100"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/price_btc" />

            <TextView
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/priceBtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/change_1h" />

            <TextView
                android:paddingRight="@dimen/horizontalPadding16dp"
                style="@style/textStyle"
                android:layout_alignParentEnd="true"
                android:id="@+id/change1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />

        </RelativeLayout>

        <RelativeLayout

            android:background="@color/blueDark100"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/change_24h" />

            <TextView
                android:paddingRight="@dimen/horizontalPadding16dp"
                style="@style/textStyle"
                android:layout_alignParentEnd="true"
                android:id="@+id/change24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">

            <TextView
                android:layout_width="wrap_content"
                style="@style/textStyle"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:text="@string/change_7d" />

            <TextView
                android:paddingRight="@dimen/horizontalPadding16dp"
                style="@style/textStyle"
                android:layout_alignParentEnd="true"
                android:id="@+id/change7d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

        <RelativeLayout

            android:background="@color/blueDark100"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_detail_act">
            <TextView
                style="@style/textStyle"
                android:paddingLeft="@dimen/horizontalPadding16dp"
                android:text="@string/last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/textStyle"
                android:paddingRight="@dimen/horizontalPadding16dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>

